Change button to Edit on GH

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <p>Ideas for sneaking Clojure into your workplace</p>
         <p class="view"><a href="https://github.com/jakubholynet/trojan-clojure">View the Project on GitHub <small>jakubholynet/trojan-clojure</small></a></p>
         <ul>
-          <li><a href="https://github.com/jakubholynet/trojan-clojure">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/jakubholynet/trojan-clojure/blob/gh-pages/index.md">Edit On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
